@@ -2,6 +2,7 @@
 - (3.1.1-1)
 - No more mask/unmask for Talker/Listener.
 - puserdrivernidaqmx.cpp: Surpress warning during stopPulseGen().
+- nmrspectrumbase_impl.h: Fix for coarse resolution.
 
 * Wed Apr 7 2010 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
 - (3.1.0-1)
